tests/ui/typech/visibility_method_outside_priv.lm
struct Foo { }

impl Foo {
    fn bar(self) { }
}

fn foo() {
    let foo = Foo { };

    foo.bar();
}
